# qt-practice

./: CMakeLists.txt  main.cpp  main.h  main.ui  receiver.cpp  receiver.h  sender.h
